tests/negative/neg_try_send_success_overwrite.safe
-- Test: neg_try_send_success_overwrite
-- Description: Overwriting Success does not resolve a pending try_send move.
--   The source remains conditionally moved until Success is actually refined.
-- Expected: REJECT move_target_not_null

package Neg_Try_Send_Success_Overwrite is

   type Payload is record
      Value : Integer;
   end record;

   type Payload_Ptr is access Payload;

   channel Data_Ch : Payload_Ptr capacity 1;

   procedure Run is
      Source  : Payload_Ptr = new ((Value = 1) as Payload);
      Success : Boolean = False;
   begin
      try_send Data_Ch, Source, Success;
      Success = False;
      Source = new ((Value = 2) as Payload);
   end Run;

end Neg_Try_Send_Success_Overwrite;
